syntax = "proto3";
package ru.dmitriyt.dcs.proto;
option java_outer_classname = "GraphTaskProto";
option java_package = "ru.dmitriyt.dcs.proto";

service GraphTask {
  /** Получить пачку графов на выполнение **/
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  /** Отослать результаты выполнения **/
  rpc SendTaskResult(SendTaskResultRequest) returns (SendTaskResultResponse);
}

message GetTaskRequest {}

message GetTaskResponse {
  Task task = 1;
}

message Task {
  int32 id = 1;
  int32 partNumber = 2;
  int32 n = 3;
}

message SendTaskResultRequest {
  TaskResult taskResult = 1;
}

message TaskResult {
  int32 taskId = 1;
  int32 processedGraphs = 2;
  oneof result {
    TaskInvariantResult resultInvariant = 3;
    TaskConditionResult resultCondition = 4;
  }
}

message TaskInvariantResult {
  repeated int32 results = 1;
}

message TaskConditionResult {
  repeated string graphs = 1;
}

message SendTaskResultResponse {}